| Summary: | ASTERISK-29655: res_pjsip_session: No video to caller if no camera available | ||||
| Reporter: | Michael Auracher (MichaelAUM) | Labels: | |||
| Date Opened: | 2021-09-15 07:19:20 | Date Closed: | 2022-04-26 10:45:35 | ||
| Priority: | Minor | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | Resources/res_pjsip_session | ||
| Versions: | 16.10.0 18.6.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Alpine Linux (in Docker), various versions. All Asterisk versions >16.9 | Attachments: | ( 0) debug_log_novideo.log ( 1) novideo.pcap ( 2) patched.log ( 3) patched.pcap | ||
| Description: | This issue is 100% reproducable on all Asterisk versions > 16.9.0
Setup: Asterisk with default config, only devices are configured. Codecs: h264 + any audio codec Reproduce: Device 1 has a display but no camera Device 2 has a display and camera 1. Call from Device 1 to Device 2 2. Answer call on Device 2 (we have auto answer enabled) Actual result: No Video is shown on on caller display (Device 1) Expected result: Video is shown on on caller display (Device 1) Happens after the changes introduced in https://issues.asterisk.org/jira/browse/ASTERISK-28783 in https://gerrit.asterisk.org/c/asterisk/+/13954/2/res/res_pjsip_session.c Workaround: patched file by reverting the changes from ASTERISK-28783 | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2021-09-15 07:19:23.324-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Joshua C. Colp (jcolp) 2021-09-15 07:21:57.841-0500 This would be the same underlying issue as ASTERISK-29638 most likely, specifically in the handling of stream state. By: Joshua C. Colp (jcolp) 2021-09-15 07:24:06.977-0500 Just like the other issue, please attach the respective logs so it can be tested when the underlying issue is looked into. By: Michael Auracher (MichaelAUM) 2021-09-15 07:24:48.260-0500 Attached log and network catpure: novideo* -> Asterisk 18.6.0 built without patch ( will show no video) patched* -> Asterisk 18.6.0 built with patch ( video is working again) By: Martin Oberhuber (mober) 2021-10-04 12:00:42.403-0500 Hello, I'm surprised that this issue is unassigned and considered low priority? It is apparently a regression compared to Asterisk-16.9 And it affects all devices that receive only video but don't send any. After upgrading to Asterisk >= 16.10 , those devices do not receive any video any more, if they are the caller !! Is there anything we can do to help investigation or development ? Reverting the res_pjsip_session.c changes from the description fixes the problem. But we don't know what side-effects reverting those changes has. And what that change was good for in the first place. Can you explain? Thanks! Martin By: Joshua C. Colp (jcolp) 2021-10-04 12:04:20.244-0500 If any additional information is required or needed, it will be commented here and once someone is looking at this then it will be assigned. From a Sangoma perspective it is in the queue to be looked at, I have no time frame on when that will happen. I can't speak for the community at large as to whether any individual has any interest in this. By: Friendly Automation (friendly-automation) 2022-04-26 10:45:36.685-0500 Change 18371 merged by Friendly Automation: core_unreal & app_dial: Flip stream direction of second channel. [https://gerrit.asterisk.org/c/asterisk/+/18371|https://gerrit.asterisk.org/c/asterisk/+/18371] By: Friendly Automation (friendly-automation) 2022-04-26 10:48:44.500-0500 Change 18386 merged by Friendly Automation: app_dial: Flip stream direction of outgoing channel. [https://gerrit.asterisk.org/c/asterisk/+/18386|https://gerrit.asterisk.org/c/asterisk/+/18386] By: Friendly Automation (friendly-automation) 2022-04-26 10:48:50.872-0500 Change 18385 merged by Friendly Automation: app_dial: Flip stream direction of outgoing channel. [https://gerrit.asterisk.org/c/asterisk/+/18385|https://gerrit.asterisk.org/c/asterisk/+/18385] By: Friendly Automation (friendly-automation) 2022-04-26 12:22:48.971-0500 Change 18387 merged by Friendly Automation: app_dial: Flip stream direction of outgoing channel. [https://gerrit.asterisk.org/c/asterisk/+/18387|https://gerrit.asterisk.org/c/asterisk/+/18387] By: Friendly Automation (friendly-automation) 2022-05-05 08:15:49.882-0500 Change 18497 merged by Friendly Automation: core_unreal: Flip stream direction of second channel. [https://gerrit.asterisk.org/c/asterisk/+/18497|https://gerrit.asterisk.org/c/asterisk/+/18497] By: Friendly Automation (friendly-automation) 2022-05-05 08:15:56.809-0500 Change 18419 merged by Friendly Automation: core_unreal: Flip stream direction of second channel. [https://gerrit.asterisk.org/c/asterisk/+/18419|https://gerrit.asterisk.org/c/asterisk/+/18419] By: Friendly Automation (friendly-automation) 2022-05-05 08:17:17.672-0500 Change 18496 merged by Friendly Automation: core_unreal: Flip stream direction of second channel. [https://gerrit.asterisk.org/c/asterisk/+/18496|https://gerrit.asterisk.org/c/asterisk/+/18496] | ||||