core_unreal & app_dial: Flip stream direction of second channel.

When executing dial, the topology of the inbound channel is cloned and
used for the outbound channel. This creates issues when an incoming
stream is sendonly or recvonly as the stream state of the outbound
channel will be the same as the stream state of the inbound channel.

Now the stream state is flipped for the outgoing stream in
dial_exec_full if the incoming stream topology is recvonly or sendonly.

The same is the case for unreal (local) channels which create a second
(;2) channel as a counterpart which clones the topology of the
first channel. Now the stream state is flipped for the streams of
the 2nd channel in ast_unreal_new_channels if the incoming stream
topology is recvonly or sendonly.

ASTERISK-29655
Reported by: Michael Auracher

ASTERISK-29638
Reported by: Michael Auracher

Change-Id: I294dc834ac9a5f048b101b691669959e9df630e1